--- a/source/scss/_blocks/_catalog-sc.scss
+++ b/source/scss/_blocks/_catalog-sc.scss
@@ -24,6 +24,12 @@
 	&__img {
 		width: auto;
 		height: 400px;
+		margin-bottom: -20px;
+		transition: transform 0.3s ease;
+
+		&:hover {
+			transform: translateY(-20px);
+		}
 	}
 
 	&__category {
