--- a/source/scss/_blocks/_equipment.scss
+++ b/source/scss/_blocks/_equipment.scss
@@ -15,13 +15,16 @@
 
 	&__name {
 		font-size: 18px;
-		line-height: 1.1;
+		font-weight: 500;
+		line-height: 1.085;
 		color: $special;
 		margin-block: 10px 15px;
 	}
 
 	&__desc {
 		font-size: 15px;
+		font-weight: 500;
+		line-height: 1.085;
 	}
 }
 
