--- a/source/scss/_blocks/_product-top.scss
+++ b/source/scss/_blocks/_product-top.scss
@@ -35,13 +35,13 @@
 			content: '';
 			width: 100%;
 			height: 100%;
-			background: transparent url('../img/faq_chevron.png') no-repeat center;
+			background: transparent url('../img/product_slider_arrow.svg') no-repeat center;
 			background-size: contain;
 			display: block;
 		}
 	}
 
-	.slick-next {
+	.slick-prev {
 		transform: rotate(180deg);
 	}
 
