--- a/source/scss/_blocks/_guarantee.scss
+++ b/source/scss/_blocks/_guarantee.scss
@@ -1,312 +1,317 @@
 .guarantee {
-	padding: 0 0 50px;
-	background-color: #ffffff;
-	display: grid;
-	grid-template-columns: [full-width-start] 100px [content-start] 1fr [content-end] 100px [full-width-end];
-	z-index: 1;
+  padding: 0 0 50px;
+  background-color: #ffffff;
+  display: grid;
+  grid-template-columns: [full-width-start] 100px [content-start] 1fr [content-end] 100px [full-width-end];
+  z-index: 1;
 
-	> * {
-		grid-column: content;
-	}
+  > *:not(.full-width) {
+    grid-column: content;
+  }
 
-	&__top-img {
-		width: 100%;
-		height: auto;
-		margin-bottom: 70px;
-		grid-column: full-width;
-		position: relative;
+  .full-width {
+    grid-column: full-width;
+  }
 
-		img {
-			width: 100%;
-			height: 100%;
-			object-fit: cover;
-		}
-	}
+  &__top-img {
+    width: 100%;
+    height: auto;
+    margin-bottom: 70px;
+    grid-column: full-width;
+    position: relative;
 
-	&__caption {
-		font-size: 36px;
-		line-height: 48px;
-		text-align: center;
-		text-transform: uppercase;
-		margin-block: 80px 60px;
-	}
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
 
-	&__content {
-		font-size: 20px;
-		line-height: 26px;
+  &__caption {
+    font-size: 36px;
+    line-height: 48px;
+    text-align: center;
+    text-transform: uppercase;
+    margin-block: 80px 60px;
+  }
 
-		li {
-			display: flex;
-			gap: 10px;
-			&::before {
-				content: '';
-				width: 13px;
-				height: 4px;
-				margin-top: 0.55em;
-				background-color: $special;
-				display: block;
-			}
-		}
-	}
+  &__content {
+    font-size: 20px;
+    line-height: 26px;
 
-	&__certificates {
-		margin-top: 100px;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		gap: 100px;
-		overflow: hidden;
-	}
+    li {
+      display: flex;
+      gap: 10px;
+      &::before {
+        content: "";
+        width: 13px;
+        height: 4px;
+        margin-top: 0.55em;
+        background-color: $special;
+        display: block;
+      }
+    }
+  }
 
-	&__certificate {
-		height: 270px;
-		box-shadow: 0px 4px 30px 0px rgba(50, 54, 125, 0.1);
-		display: block;
+  &__certificates {
+    margin-top: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 100px;
+    overflow: hidden;
+  }
 
-		> img {
-			height: 100%;
-			width: auto;
-		}
-	}
+  &__certificate {
+    height: 270px;
+    box-shadow: 0px 4px 30px 0px rgba(50, 54, 125, 0.1);
+    display: block;
 
-	&__link {
-		margin-top: 120px;
-		margin-inline: auto;
-	}
+    > img {
+      height: 100%;
+      width: auto;
+    }
+  }
+
+  &__link {
+    margin-top: 120px;
+    margin-inline: auto;
+  }
 }
 
 @include xl-up {
-	.guarantee {
-		grid-template-columns:
-			[full-width-start]
-			1fr
-			150px
-			[content-start] 1240px [content-end]
-			150px
-			1fr
-			[full-width-end];
+  .guarantee {
+    grid-template-columns:
+      [full-width-start]
+      1fr
+      150px
+      [content-start] 1240px [content-end]
+      150px
+      1fr
+      [full-width-end];
 
-		&__top-img-wrap {
-			margin-bottom: 70px;
-			background-color: #e8e8e8;
-			display: grid;
-			grid-template-columns: subgrid;
-			grid-area: full-width;
-		}
-		&__top-img {
-			margin-bottom: 0;
-			grid-area: content;
+    &__top-img-wrap {
+      margin-bottom: 70px;
+      background-color: #e8e8e8;
+      display: grid;
+      grid-template-columns: subgrid;
+      grid-area: full-width;
+      grid-row-start: 1;
+    }
+    &__top-img {
+      margin-bottom: 0;
+      grid-area: content;
 
-			&::before,
-			&::after {
-				content: '';
-				height: 100%;
-				width: 5%;
-				display: block;
-				position: absolute;
-				top: 0;
-				bottom: 0;
-			}
+      &::before,
+      &::after {
+        content: "";
+        height: 100%;
+        width: 5%;
+        display: block;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+      }
 
-			&::before {
-				background-image: linear-gradient(to right, #e8e8e8, transparent);
-				left: 0;
-			}
+      &::before {
+        background-image: linear-gradient(to right, #e8e8e8, transparent);
+        left: 0;
+      }
 
-			&::after {
-				background-image: linear-gradient(to left, #e8e8e8, transparent);
-				right: 0;
-			}
-		}
-	}
+      &::after {
+        background-image: linear-gradient(to left, #e8e8e8, transparent);
+        right: 0;
+      }
+    }
+  }
 }
 
 @include xl {
-	.guarantee {
-		padding: 0 0 calc(100vw * (50 / $xl));
-		grid-template-columns:
-			[full-width-start]
-			calc(100vw * (122 / $xl))
-			[content-start] 1fr [content-end]
-			calc(100vw * (122 / $xl))
-			[full-width-end];
+  .guarantee {
+    padding: 0 0 calc(100vw * (50 / $xl));
+    grid-template-columns:
+      [full-width-start]
+      calc(100vw * (122 / $xl))
+      [content-start] 1fr [content-end]
+      calc(100vw * (122 / $xl))
+      [full-width-end];
 
-		&__top-img {
-			margin-bottom: calc(100vw * (70 / $xl));
-		}
+    &__top-img {
+      margin-bottom: calc(100vw * (70 / $xl));
+    }
 
-		&__caption {
-			font-size: calc(100vw * (36 / $xl));
-			line-height: calc(100vw * (48 / $xl));
-			margin-block: calc(100vw * (80 / $xl)) calc(100vw * (60 / $xl));
-		}
+    &__caption {
+      font-size: calc(100vw * (36 / $xl));
+      line-height: calc(100vw * (48 / $xl));
+      margin-block: calc(100vw * (80 / $xl)) calc(100vw * (60 / $xl));
+    }
 
-		&__content {
-			font-size: calc(100vw * (20 / $xl));
-			line-height: calc(100vw * (26 / $xl));
-		}
+    &__content {
+      font-size: calc(100vw * (20 / $xl));
+      line-height: calc(100vw * (26 / $xl));
+    }
 
-		&__certificates {
-			margin-top: calc(100vw * (100 / $xl));
-			gap: calc(100vw * (100 / $xl));
-		}
+    &__certificates {
+      margin-top: calc(100vw * (100 / $xl));
+      gap: calc(100vw * (100 / $xl));
+    }
 
-		&__certificate {
-			height: calc(100vw * (270 / $xl));
-		}
+    &__certificate {
+      height: calc(100vw * (270 / $xl));
+    }
 
-		&__link {
-			margin-top: calc(100vw * (120 / $xl));
-		}
-	}
+    &__link {
+      margin-top: calc(100vw * (120 / $xl));
+    }
+  }
 }
 
 @include lg {
-	.guarantee {
-		padding: 0 0 calc(100vw * (35 / $lg));
-		grid-template-columns:
-			[full-width-start]
-			calc(100vw * (100 / $lg))
-			[content-start] 1fr [content-end]
-			calc(100vw * (100 / $lg))
-			[full-width-end];
+  .guarantee {
+    padding: 0 0 calc(100vw * (35 / $lg));
+    grid-template-columns:
+      [full-width-start]
+      calc(100vw * (100 / $lg))
+      [content-start] 1fr [content-end]
+      calc(100vw * (100 / $lg))
+      [full-width-end];
 
-		&__top-img {
-			margin-bottom: calc(100vw * (50 / $lg));
-		}
+    &__top-img {
+      margin-bottom: calc(100vw * (50 / $lg));
+    }
 
-		&__caption {
-			font-size: calc(100vw * (30 / $lg));
-			line-height: calc(100vw * (40 / $lg));
-			margin-block: calc(100vw * (65 / $lg)) calc(100vw * (50 / $lg));
-		}
+    &__caption {
+      font-size: calc(100vw * (30 / $lg));
+      line-height: calc(100vw * (40 / $lg));
+      margin-block: calc(100vw * (65 / $lg)) calc(100vw * (50 / $lg));
+    }
 
-		&__content {
-			font-size: calc(100vw * (20 / $lg));
-			line-height: calc(100vw * (26 / $lg));
-		}
+    &__content {
+      font-size: calc(100vw * (20 / $lg));
+      line-height: calc(100vw * (26 / $lg));
+    }
 
-		&__certificates {
-			margin-top: calc(100vw * (80 / $lg));
-			gap: calc(100vw * (30 / $lg));
-		}
+    &__certificates {
+      margin-top: calc(100vw * (80 / $lg));
+      gap: calc(100vw * (30 / $lg));
+    }
 
-		&__certificate {
-			height: calc(100vw * (246 / $lg));
-		}
+    &__certificate {
+      height: calc(100vw * (246 / $lg));
+    }
 
-		&__link {
-			margin-top: calc(100vw * (80 / $lg));
-		}
-	}
+    &__link {
+      margin-top: calc(100vw * (80 / $lg));
+    }
+  }
 }
 
 @include sm {
-	.guarantee {
-		padding: 0 0 calc(100vw * (37 / $sm));
-		grid-template-columns:
-			[full-width-start]
-			calc(100vw * (25 / $sm))
-			[content-start] 1fr [content-end]
-			calc(100vw * (25 / $sm))
-			[full-width-end];
+  .guarantee {
+    padding: 0 0 calc(100vw * (37 / $sm));
+    grid-template-columns:
+      [full-width-start]
+      calc(100vw * (25 / $sm))
+      [content-start] 1fr [content-end]
+      calc(100vw * (25 / $sm))
+      [full-width-end];
 
-		&__top-img {
-			margin-bottom: calc(100vw * (45 / $sm));
-		}
+    &__top-img {
+      margin-bottom: calc(100vw * (45 / $sm));
+    }
 
-		&__caption {
-			font-size: calc(100vw * (26 / $sm));
-			line-height: calc(100vw * (32 / $sm));
-			margin-block: calc(100vw * (40 / $sm)) calc(100vw * (25 / $sm));
-		}
+    &__caption {
+      font-size: calc(100vw * (26 / $sm));
+      line-height: calc(100vw * (32 / $sm));
+      margin-block: calc(100vw * (40 / $sm)) calc(100vw * (25 / $sm));
+    }
 
-		&__content {
-			font-size: calc(100vw * (18 / $sm));
-			line-height: calc(100vw * (24 / $sm));
-		}
+    &__content {
+      font-size: calc(100vw * (18 / $sm));
+      line-height: calc(100vw * (24 / $sm));
+    }
 
-		&__certificates {
-			height: calc(100vw * (200 / $sm));
-		}
+    &__certificates {
+      height: calc(100vw * (200 / $sm));
+    }
 
-		&__link {
-			margin-top: calc(100vw * (60 / $lg));
-		}
-	}
+    &__link {
+      margin-top: calc(100vw * (60 / $lg));
+    }
+  }
 }
 
 @include xs {
-	.guarantee {
-		padding: 0 0 calc(100vw * (35 / $xs-base));
-		grid-template-columns:
-			[full-width-start]
-			calc(100vw * (15 / $xs-base))
-			[content-start] 1fr [content-end]
-			calc(100vw * (15 / $xs-base))
-			[full-width-end];
+  .guarantee {
+    padding: 0 0 calc(100vw * (35 / $xs-base));
+    grid-template-columns:
+      [full-width-start]
+      calc(100vw * (15 / $xs-base))
+      [content-start] 1fr [content-end]
+      calc(100vw * (15 / $xs-base))
+      [full-width-end];
 
-		&__top-img {
-			margin-bottom: calc(100vw * (25 / $xs-base));
-		}
+    &__top-img {
+      margin-bottom: calc(100vw * (25 / $xs-base));
+    }
 
-		&__caption {
-			font-size: calc(100vw * (18 / $xs-base));
-			line-height: calc(100vw * (24 / $xs-base));
-			margin-block: calc(100vw * (30 / $xs-base));
-		}
+    &__caption {
+      font-size: calc(100vw * (18 / $xs-base));
+      line-height: calc(100vw * (24 / $xs-base));
+      margin-block: calc(100vw * (30 / $xs-base));
+    }
 
-		&__content {
-			font-size: calc(100vw * (14 / $xs-base));
-			line-height: calc(100vw * (18 / $xs-base));
-		}
+    &__content {
+      font-size: calc(100vw * (14 / $xs-base));
+      line-height: calc(100vw * (18 / $xs-base));
+    }
 
-		&__certificates {
-			height: auto;
-			margin-top: calc(100vw * (40 / $xs-base));
-			// flex-direction: column;
-			flex-wrap: wrap;
-			gap: calc(100vw * (20 / $xs-base));
-		}
+    &__certificates {
+      height: auto;
+      margin-top: calc(100vw * (40 / $xs-base));
+      // flex-direction: column;
+      flex-wrap: wrap;
+      gap: calc(100vw * (20 / $xs-base));
+    }
 
-		&__certificate {
-			height: calc(100vw * (186 / $xs-base));
+    &__certificate {
+      height: calc(100vw * (186 / $xs-base));
 
-			> img {
-				width: auto !important;
-				height: 100%;
-				margin-inline: auto;
-			}
-		}
+      > img {
+        width: auto !important;
+        height: 100%;
+        margin-inline: auto;
+      }
+    }
 
-		&__link {
-			margin-top: calc(100vw * (40 / $xs-base));
-		}
+    &__link {
+      margin-top: calc(100vw * (40 / $xs-base));
+    }
 
-		.owl-dots {
-			margin-top: 20px;
-			display: flex;
-			justify-content: center;
-			gap: 10px;
-		}
+    .owl-dots {
+      margin-top: 20px;
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+    }
 
-		.owl-carousel button.owl-dot {
-			flex-basis: 60px;
-			flex-shrink: 1;
-			max-width: 60px;
-			height: 5px;
-			background-color: #d9d9d9;
-			border-radius: 100vw;
-			display: block;
-		}
+    .owl-carousel button.owl-dot {
+      flex-basis: 60px;
+      flex-shrink: 1;
+      max-width: 60px;
+      height: 5px;
+      background-color: #d9d9d9;
+      border-radius: 100vw;
+      display: block;
+    }
 
-		.owl-carousel button.owl-dot.active {
-			background-color: #32367d;
-		}
+    .owl-carousel button.owl-dot.active {
+      background-color: #32367d;
+    }
 
-		.owl-carousel button.owl-dot span {
-			width: 100%;
-			height: 100%;
-		}
-	}
+    .owl-carousel button.owl-dot span {
+      width: 100%;
+      height: 100%;
+    }
+  }
 }
