--- a/source/scss/_blocks/_registration.scss
+++ b/source/scss/_blocks/_registration.scss
@@ -1,416 +1,421 @@
 .registration {
-	padding: 0 0 50px;
-	background-color: #ffffff;
-	display: grid;
-	grid-template-columns: [full-width-start] 100px [content-start] 1fr [content-end] 100px [full-width-end];
-	z-index: 1;
+  padding: 0 0 50px;
+  background-color: #ffffff;
+  display: grid;
+  grid-template-columns: [full-width-start] 100px [content-start] 1fr [content-end] 100px [full-width-end];
+  z-index: 1;
 
-	> * {
-		grid-column: content;
-	}
+  > *:not(.full-width) {
+    grid-column: content;
+  }
 
-	&__top-img {
-		width: 100%;
-		height: auto;
-		margin-bottom: 70px;
-		grid-column: full-width;
-		position: relative;
+  .full-width {
+    grid-column: full-width;
+  }
 
-		img {
-			width: 100%;
-			height: 100%;
-			object-fit: cover;
-		}
-	}
+  &__top-img {
+    width: 100%;
+    height: auto;
+    margin-bottom: 70px;
+    grid-column: full-width;
+    position: relative;
 
-	&__content {
-		font-size: 18px;
-		line-height: 1.4;
-		margin-block: 40px 75px;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
 
-		ol {
-			padding-left: 1em;
-			margin-block: 1em;
-		}
+  &__content {
+    font-size: 18px;
+    line-height: 1.4;
+    margin-block: 40px 75px;
 
-		p + p {
-			margin-top: 1em;
-		}
-	}
+    ol {
+      padding-left: 1em;
+      margin-block: 1em;
+    }
 
-	&__steps {
-		width: max-content;
-		margin-block: 35px 30px;
-		margin-inline: auto;
-		display: grid;
-		grid-template-columns: repeat(3, 233px);
-		gap: 80px;
-	}
+    p + p {
+      margin-top: 1em;
+    }
+  }
 
-	&__step {
-		font-size: 15px;
-		line-height: 1.4;
-		padding: 16px 18px 25px 34px;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		gap: 20px;
-		position: relative;
-	}
+  &__steps {
+    width: max-content;
+    margin-block: 35px 30px;
+    margin-inline: auto;
+    display: grid;
+    grid-template-columns: repeat(3, 233px);
+    gap: 80px;
+  }
 
-	&__step-num {
-		width: 30px;
-		aspect-ratio: 1 / 1;
-		position: absolute;
-		top: 20px;
-		left: 6px;
-	}
+  &__step {
+    font-size: 15px;
+    line-height: 1.4;
+    padding: 16px 18px 25px 34px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    position: relative;
+  }
 
-	&__step-icon {
-		width: 80px;
-		aspect-ratio: 1 / 1;
-	}
+  &__step-num {
+    width: 30px;
+    aspect-ratio: 1 / 1;
+    position: absolute;
+    top: 20px;
+    left: 6px;
+  }
 
-	&__screenshots {
-		margin-bottom: 60px;
-		display: flex;
-		justify-content: space-between;
-	}
+  &__step-icon {
+    width: 80px;
+    aspect-ratio: 1 / 1;
+  }
 
-	&__screenshot {
-		width: auto;
-		height: 263px;
-		box-shadow: 0px 4px 30px 0px rgba(50, 54, 125, 0.1);
-		display: block;
+  &__screenshots {
+    margin-bottom: 60px;
+    display: flex;
+    justify-content: space-between;
+  }
 
-		> img {
-			width: auto;
-			height: 100%;
-		}
-	}
+  &__screenshot {
+    width: auto;
+    height: 263px;
+    box-shadow: 0px 4px 30px 0px rgba(50, 54, 125, 0.1);
+    display: block;
 
-	&__link {
-		font-size: 18px;
-		font-style: normal;
-		font-weight: 500;
-		line-height: 1;
-		color: $special;
-		width: 260px;
-		height: 50px;
-		margin-inline: auto;
-		background: $white;
-		border: 1px solid currentColor;
-		border-radius: 25px;
-		display: grid;
-		place-content: center;
-		transition: color 0.3s ease;
+    > img {
+      width: auto;
+      height: 100%;
+    }
+  }
 
-		&:hover {
-			color: $special-dark;
-		}
-	}
+  &__link {
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1;
+    color: $special;
+    width: 260px;
+    height: 50px;
+    margin-inline: auto;
+    background: $white;
+    border: 1px solid currentColor;
+    border-radius: 25px;
+    display: grid;
+    place-content: center;
+    transition: color 0.3s ease;
+
+    &:hover {
+      color: $special-dark;
+    }
+  }
 }
 
 @include xl-up {
-	.registration {
-		grid-template-columns:
-			[full-width-start]
-			1fr
-			150px
-			[content-start] 1240px [content-end]
-			150px
-			1fr
-			[full-width-end];
+  .registration {
+    grid-template-columns:
+      [full-width-start]
+      1fr
+      150px
+      [content-start] 1240px [content-end]
+      150px
+      1fr
+      [full-width-end];
 
-		&__top-img-wrap {
-			margin-bottom: 70px;
-			background-color: $black;
-			display: grid;
-			grid-template-columns: subgrid;
-			grid-area: full-width;
-		}
+    &__top-img-wrap {
+      margin-bottom: 70px;
+      background-color: $black;
+      display: grid;
+      grid-template-columns: subgrid;
+      grid-area: full-width;
+      grid-row-start: 1;
+    }
 
-		&__top-img {
-			margin-bottom: 0;
-			position: relative;
-			grid-area: content;
+    &__top-img {
+      margin-bottom: 0;
+      position: relative;
+      grid-area: content;
 
-			&::before,
-			&::after {
-				content: '';
-				height: 100%;
-				width: 100%;
-				display: block;
-				position: absolute;
-				top: 0;
-				bottom: 0;
-			}
+      &::before,
+      &::after {
+        content: "";
+        height: 100%;
+        width: 100%;
+        display: block;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+      }
 
-			&::before {
-				background-image: linear-gradient(to right, $black 0%, transparent 5%, transparent 95%, $black 100%);
-				left: 0;
-			}
-		}
-	}
+      &::before {
+        background-image: linear-gradient(to right, $black 0%, transparent 5%, transparent 95%, $black 100%);
+        left: 0;
+      }
+    }
+  }
 }
 
 @include xl {
-	.registration {
-		padding: 0 0 calc(100vw * (50 / $xl));
-		grid-template-columns:
-			[full-width-start]
-			calc(100vw * (122 / $xl))
-			[content-start] 1fr [content-end]
-			calc(100vw * (122 / $xl))
-			[full-width-end];
+  .registration {
+    padding: 0 0 calc(100vw * (50 / $xl));
+    grid-template-columns:
+      [full-width-start]
+      calc(100vw * (122 / $xl))
+      [content-start] 1fr [content-end]
+      calc(100vw * (122 / $xl))
+      [full-width-end];
 
-		&__top-img {
-			margin-bottom: calc(100vw * (70 / $xl));
-		}
+    &__top-img {
+      margin-bottom: calc(100vw * (70 / $xl));
+    }
 
-		&__caption {
-			font-size: calc(100vw * (36 / $xl));
-			line-height: calc(100vw * (48 / $xl));
-			margin-block: calc(100vw * (40 / $xl)) calc(100vw * (75 / $xl));
-		}
+    &__caption {
+      font-size: calc(100vw * (36 / $xl));
+      line-height: calc(100vw * (48 / $xl));
+      margin-block: calc(100vw * (40 / $xl)) calc(100vw * (75 / $xl));
+    }
 
-		&__steps {
-			margin-block: calc(100vw * (35 / $xl)) calc(100vw * (30 / $xl));
-			grid-template-columns: repeat(3, calc(100vw * (233 / $xl)));
-			gap: calc(100vw * (80 / $xl));
-		}
+    &__steps {
+      margin-block: calc(100vw * (35 / $xl)) calc(100vw * (30 / $xl));
+      grid-template-columns: repeat(3, calc(100vw * (233 / $xl)));
+      gap: calc(100vw * (80 / $xl));
+    }
 
-		&__step {
-			font-size: calc(100vw * (15 / $xl));
-			padding: calc(100vw * (16 / $xl)) calc(100vw * (18 / $xl)) calc(100vw * (25 / $xl)) calc(100vw * (34 / $xl));
-			gap: calc(100vw * (20 / $xl));
-		}
+    &__step {
+      font-size: calc(100vw * (15 / $xl));
+      padding: calc(100vw * (16 / $xl)) calc(100vw * (18 / $xl)) calc(100vw * (25 / $xl)) calc(100vw * (34 / $xl));
+      gap: calc(100vw * (20 / $xl));
+    }
 
-		&__step-num {
-			width: calc(100vw * (30 / $xl));
-			top: calc(100vw * (20 / $xl));
-			left: calc(100vw * (6 / $xl));
-		}
+    &__step-num {
+      width: calc(100vw * (30 / $xl));
+      top: calc(100vw * (20 / $xl));
+      left: calc(100vw * (6 / $xl));
+    }
 
-		&__step-icon {
-			width: calc(100vw * (80 / $xl));
-		}
+    &__step-icon {
+      width: calc(100vw * (80 / $xl));
+    }
 
-		&__screenshots {
-			margin-bottom: calc(100vw * (60 / $xl));
-		}
+    &__screenshots {
+      margin-bottom: calc(100vw * (60 / $xl));
+    }
 
-		&__screenshot {
-			height: calc(100vw * (263 / $xl));
-		}
+    &__screenshot {
+      height: calc(100vw * (263 / $xl));
+    }
 
-		&__link {
-			font-size: calc(100vw * (18 / $xl));
-			width: calc(100vw * (260 / $xl));
-			height: calc(100vw * (50 / $xl));
-			border-radius: calc(100vw * (25 / $xl));
-		}
-	}
+    &__link {
+      font-size: calc(100vw * (18 / $xl));
+      width: calc(100vw * (260 / $xl));
+      height: calc(100vw * (50 / $xl));
+      border-radius: calc(100vw * (25 / $xl));
+    }
+  }
 }
 
 @include lg {
-	.registration {
-		padding: 0 0 calc(100vw * (35 / $lg));
-		grid-template-columns:
-			[full-width-start]
-			calc(100vw * (100 / $lg))
-			[content-start] 1fr [content-end]
-			calc(100vw * (100 / $lg))
-			[full-width-end];
+  .registration {
+    padding: 0 0 calc(100vw * (35 / $lg));
+    grid-template-columns:
+      [full-width-start]
+      calc(100vw * (100 / $lg))
+      [content-start] 1fr [content-end]
+      calc(100vw * (100 / $lg))
+      [full-width-end];
 
-		&__top-img {
-			margin-bottom: calc(100vw * (50 / $lg));
-		}
+    &__top-img {
+      margin-bottom: calc(100vw * (50 / $lg));
+    }
 
-		&__caption {
-			font-size: calc(100vw * (30 / $lg));
-			line-height: calc(100vw * (40 / $lg));
-			margin-block: calc(100vw * (65 / $lg)) calc(100vw * (50 / $lg));
-		}
+    &__caption {
+      font-size: calc(100vw * (30 / $lg));
+      line-height: calc(100vw * (40 / $lg));
+      margin-block: calc(100vw * (65 / $lg)) calc(100vw * (50 / $lg));
+    }
 
-		&__content {
-			font-size: calc(100vw * (20 / $lg));
-			line-height: calc(100vw * (26 / $lg));
-			margin-block: calc(100vw * (35 / $lg)) calc(100vw * (40 / $lg));
-		}
+    &__content {
+      font-size: calc(100vw * (20 / $lg));
+      line-height: calc(100vw * (26 / $lg));
+      margin-block: calc(100vw * (35 / $lg)) calc(100vw * (40 / $lg));
+    }
 
-		&__steps {
-			margin-block: calc(100vw * (15 / $lg));
-			grid-template-columns: repeat(3, calc(100vw * (218 / $lg)));
-			gap: calc(100vw * (65 / $lg));
-		}
+    &__steps {
+      margin-block: calc(100vw * (15 / $lg));
+      grid-template-columns: repeat(3, calc(100vw * (218 / $lg)));
+      gap: calc(100vw * (65 / $lg));
+    }
 
-		&__step {
-			font-size: calc(100vw * (15 / $lg));
-			padding: calc(100vw * (16 / $lg)) calc(100vw * (4 / $lg)) calc(100vw * (25 / $lg)) calc(100vw * (34 / $lg));
-			gap: calc(100vw * (20 / $lg));
-		}
+    &__step {
+      font-size: calc(100vw * (15 / $lg));
+      padding: calc(100vw * (16 / $lg)) calc(100vw * (4 / $lg)) calc(100vw * (25 / $lg)) calc(100vw * (34 / $lg));
+      gap: calc(100vw * (20 / $lg));
+    }
 
-		&__step-num {
-			width: calc(100vw * (30 / $lg));
-			top: calc(100vw * (20 / $lg));
-			left: calc(100vw * (6 / $lg));
-		}
+    &__step-num {
+      width: calc(100vw * (30 / $lg));
+      top: calc(100vw * (20 / $lg));
+      left: calc(100vw * (6 / $lg));
+    }
 
-		&__step-icon {
-			width: calc(100vw * (80 / $lg));
-		}
+    &__step-icon {
+      width: calc(100vw * (80 / $lg));
+    }
 
-		&__screenshots {
-			margin-bottom: calc(100vw * (30 / $lg));
-		}
+    &__screenshots {
+      margin-bottom: calc(100vw * (30 / $lg));
+    }
 
-		&__screenshot {
-			height: calc(100vw * (192 / $lg));
-		}
+    &__screenshot {
+      height: calc(100vw * (192 / $lg));
+    }
 
-		&__link {
-			font-size: calc(100vw * (18 / $lg));
-			width: calc(100vw * (260 / $lg));
-			height: calc(100vw * (50 / $lg));
-			border-radius: calc(100vw * (25 / $lg));
-		}
-	}
+    &__link {
+      font-size: calc(100vw * (18 / $lg));
+      width: calc(100vw * (260 / $lg));
+      height: calc(100vw * (50 / $lg));
+      border-radius: calc(100vw * (25 / $lg));
+    }
+  }
 }
 
 @include sm {
-	.registration {
-		padding: 0 0 calc(100vw * (37 / $sm));
-		grid-template-columns:
-			[full-width-start]
-			calc(100vw * (25 / $sm))
-			[content-start] 1fr [content-end]
-			calc(100vw * (25 / $sm))
-			[full-width-end];
+  .registration {
+    padding: 0 0 calc(100vw * (37 / $sm));
+    grid-template-columns:
+      [full-width-start]
+      calc(100vw * (25 / $sm))
+      [content-start] 1fr [content-end]
+      calc(100vw * (25 / $sm))
+      [full-width-end];
 
-		&__top-img {
-			margin-bottom: calc(100vw * (45 / $sm));
-		}
+    &__top-img {
+      margin-bottom: calc(100vw * (45 / $sm));
+    }
 
-		&__caption {
-			font-size: calc(100vw * (26 / $sm));
-			line-height: calc(100vw * (32 / $sm));
-			margin-block: calc(100vw * (40 / $sm)) calc(100vw * (25 / $sm));
-		}
+    &__caption {
+      font-size: calc(100vw * (26 / $sm));
+      line-height: calc(100vw * (32 / $sm));
+      margin-block: calc(100vw * (40 / $sm)) calc(100vw * (25 / $sm));
+    }
 
-		&__content {
-			font-size: calc(100vw * (18 / $sm));
-			line-height: calc(100vw * (24 / $sm));
-			margin-block: calc(100vw * (35 / $sm)) calc(100vw * (40 / $sm));
-		}
+    &__content {
+      font-size: calc(100vw * (18 / $sm));
+      line-height: calc(100vw * (24 / $sm));
+      margin-block: calc(100vw * (35 / $sm)) calc(100vw * (40 / $sm));
+    }
 
-		&__steps {
-			margin-block: calc(100vw * (15 / $sm));
-			grid-template-columns: repeat(3, calc(100vw * (184 / $sm)));
-			gap: calc(100vw * (20 / $sm));
-		}
+    &__steps {
+      margin-block: calc(100vw * (15 / $sm));
+      grid-template-columns: repeat(3, calc(100vw * (184 / $sm)));
+      gap: calc(100vw * (20 / $sm));
+    }
 
-		&__step {
-			font-size: calc(100vw * (13 / $sm));
-			padding: calc(100vw * (16 / $sm)) calc(100vw * (18 / $sm)) calc(100vw * (9 / $sm)) calc(100vw * (17 / $sm));
-			gap: calc(100vw * (10 / $sm));
-		}
+    &__step {
+      font-size: calc(100vw * (13 / $sm));
+      padding: calc(100vw * (16 / $sm)) calc(100vw * (18 / $sm)) calc(100vw * (9 / $sm)) calc(100vw * (17 / $sm));
+      gap: calc(100vw * (10 / $sm));
+    }
 
-		&__step-num {
-			width: calc(100vw * (30 / $sm));
-			top: calc(100vw * (16 / $sm));
-			left: calc(100vw * (18 / $sm));
-		}
+    &__step-num {
+      width: calc(100vw * (30 / $sm));
+      top: calc(100vw * (16 / $sm));
+      left: calc(100vw * (18 / $sm));
+    }
 
-		&__step-icon {
-			width: calc(100vw * (80 / $sm));
-		}
+    &__step-icon {
+      width: calc(100vw * (80 / $sm));
+    }
 
-		&__screenshots {
-			margin-bottom: calc(100vw * (30 / $sm));
-		}
+    &__screenshots {
+      margin-bottom: calc(100vw * (30 / $sm));
+    }
 
-		&__screenshot {
-			height: calc(100vw * (143 / $sm));
-		}
+    &__screenshot {
+      height: calc(100vw * (143 / $sm));
+    }
 
-		&__link {
-			font-size: calc(100vw * (15 / $sm));
-			width: calc(100vw * (172 / $sm));
-			height: calc(100vw * (40 / $sm));
-			border-radius: calc(100vw * (25 / $sm));
-		}
-	}
+    &__link {
+      font-size: calc(100vw * (15 / $sm));
+      width: calc(100vw * (172 / $sm));
+      height: calc(100vw * (40 / $sm));
+      border-radius: calc(100vw * (25 / $sm));
+    }
+  }
 }
 
 @include xs {
-	.registration {
-		padding: 0 0 calc(100vw * (35 / $xs-base));
-		grid-template-columns:
-			[full-width-start]
-			calc(100vw * (15 / $xs-base))
-			[content-start] 1fr [content-end]
-			calc(100vw * (15 / $xs-base))
-			[full-width-end];
+  .registration {
+    padding: 0 0 calc(100vw * (35 / $xs-base));
+    grid-template-columns:
+      [full-width-start]
+      calc(100vw * (15 / $xs-base))
+      [content-start] 1fr [content-end]
+      calc(100vw * (15 / $xs-base))
+      [full-width-end];
 
-		&__top-img {
-			margin-bottom: calc(100vw * (25 / $xs-base));
-		}
+    &__top-img {
+      margin-bottom: calc(100vw * (25 / $xs-base));
+    }
 
-		&__caption {
-			font-size: calc(100vw * (18 / $xs-base));
-			line-height: calc(100vw * (24 / $xs-base));
-			margin-block: calc(100vw * (30 / $xs-base));
-		}
+    &__caption {
+      font-size: calc(100vw * (18 / $xs-base));
+      line-height: calc(100vw * (24 / $xs-base));
+      margin-block: calc(100vw * (30 / $xs-base));
+    }
 
-		&__content {
-			font-size: calc(100vw * (14 / $xs-base));
-			line-height: calc(100vw * (18 / $xs-base));
-			margin-block: calc(100vw * (35 / $xs-base)) calc(100vw * (25 / $xs-base));
-		}
+    &__content {
+      font-size: calc(100vw * (14 / $xs-base));
+      line-height: calc(100vw * (18 / $xs-base));
+      margin-block: calc(100vw * (35 / $xs-base)) calc(100vw * (25 / $xs-base));
+    }
 
-		&__steps {
-			width: 100%;
-			margin-block: calc(100vw * (10 / $xs-base));
-			grid-template-columns: 100%;
-			gap: calc(100vw * (20 / $xs-base));
-		}
+    &__steps {
+      width: 100%;
+      margin-block: calc(100vw * (10 / $xs-base));
+      grid-template-columns: 100%;
+      gap: calc(100vw * (20 / $xs-base));
+    }
 
-		&__step {
-			font-size: calc(100vw * (13 / $xs-base));
-			padding: calc(100vw * (35 / $xs-base)) calc(100vw * (7 / $xs-base)) calc(100vw * (11 / $xs-base))
-				calc(100vw * (46 / $xs-base));
-			flex-direction: row;
-			gap: calc(100vw * (16 / $xs-base));
-		}
+    &__step {
+      font-size: calc(100vw * (13 / $xs-base));
+      padding: calc(100vw * (35 / $xs-base)) calc(100vw * (7 / $xs-base)) calc(100vw * (11 / $xs-base))
+        calc(100vw * (46 / $xs-base));
+      flex-direction: row;
+      gap: calc(100vw * (16 / $xs-base));
+    }
 
-		&__step-num {
-			width: calc(100vw * (30 / $xs-base));
-			top: calc(100vw * (16 / $xs-base));
-			left: calc(100vw * (15 / $xs-base));
-		}
+    &__step-num {
+      width: calc(100vw * (30 / $xs-base));
+      top: calc(100vw * (16 / $xs-base));
+      left: calc(100vw * (15 / $xs-base));
+    }
 
-		&__step-icon {
-			width: calc(100vw * (80 / $xs-base));
-		}
+    &__step-icon {
+      width: calc(100vw * (80 / $xs-base));
+    }
 
-		&__screenshots {
-			width: max-content;
-			margin-bottom: calc(100vw * (30 / $xs-base));
-			margin-inline: auto;
-			flex-direction: column;
-			gap: calc(100vw * (20 / $xs-base));
-		}
+    &__screenshots {
+      width: max-content;
+      margin-bottom: calc(100vw * (30 / $xs-base));
+      margin-inline: auto;
+      flex-direction: column;
+      gap: calc(100vw * (20 / $xs-base));
+    }
 
-		&__screenshot {
-			height: calc(100vw * (217 / $xs-base));
-		}
+    &__screenshot {
+      height: calc(100vw * (217 / $xs-base));
+    }
 
-		&__link {
-			font-size: calc(100vw * (15 / $xs-base));
-			width: 100%;
-			height: calc(100vw * (50 / $xs-base));
-			border-radius: calc(100vw * (25 / $xs-base));
-		}
-	}
+    &__link {
+      font-size: calc(100vw * (15 / $xs-base));
+      width: 100%;
+      height: calc(100vw * (50 / $xs-base));
+      border-radius: calc(100vw * (25 / $xs-base));
+    }
+  }
 }
